--- a/Pro2/index.html
+++ b/Pro2/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <div class="logo">logo</div>
-    <div class="navigation">navigation</div>
+    <div class="logo">Logo</div>
+    <div class="navigation">Navigation</div>
     <div class="main">
-        <div class="header">header/banner</div>
+        <div class="header">Header/Banner</div>
         <div class="body">
-            <div class="side">side bar</div>
-            <div class="body-area">body area</div>
+            <div class="side">Side bar</div>
+            <div class="body-area">Body area</div>
         </div>
-        <div class="footer">footer</div>
+        <div class="footer">Footer</div>
     </div>
     
 </body>
