--- a/Pro3/pro3.html
+++ b/Pro3/pro3.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="header">
-        <div class="logo">logo</div>
+        <div class="logo">Logo</div>
         <div class="navigation">Navigation</div>
     </div>
-    <div class="banner">header/banner</div>
-    <div class="body">
+    <div class="banner">Header/Banner</div>
+    <div class="content">
         <div class="area">Intro Text Area</div>
         <div class="column">
-            <div class="box1">box1</div>
-            <div class="box2">box2</div>
-            <div class="box3">box3</div>
+            <div class="box1">Box 1</div>
+            <div class="box2">Box 2</div>
+            <div class="box3">Box 3</div>
         </div>
-    <div class="footer">footer</div>
+    <div class="footer">Footer</div>
     </div>
     
     
